--- a/src/main/webapp/pages/farmacia/medicamento/medicamento.xhtml
+++ b/src/main/webapp/pages/farmacia/medicamento/medicamento.xhtml
@@ -30,7 +30,7 @@
 
         <ui:define name="content">
             <h:form id="form">
-
+                <!-- Administracion de Medicamentos -->
                 <h:panelGroup id="fnp" layout="block" class="clearfix">
                     <label for="fnct">#{messages['common.fecha.ingreso.medicamento']}</label>
                     <div class="input" >
