--- a/src/main/webapp/pages/farmacia/medicamento/lista.xhtml
+++ b/src/main/webapp/pages/farmacia/medicamento/lista.xhtml
@@ -2,7 +2,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
-
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:p="http://primefaces.org/ui">
@@ -33,7 +32,7 @@
         <ui:define name="content">           
             <!--Metadato que se realiza antes de renderizarse la vista-->
             <f:metadata>
-                <f:viewParam name="result" value="#{medicamentoListServicio.primerResul}" />
+                <f:viewParam name="result" value="#{medicamentoListaServicio.primerResult}" />
             </f:metadata>
             <!--Formulario dentro de un contenedor-->
             <h:form id="form">            
