--- a/src/main/webapp/pages/farmacia/medicamento/lista.xhtml
+++ b/src/main/webapp/pages/farmacia/medicamento/lista.xhtml
@@ -32,7 +32,7 @@
         <ui:define name="content">           
             <!--Metadato que se realiza antes de renderizarse la vista-->
             <f:metadata>
-                <f:viewParam name="result" value="#{medicamentoListaServicio.primerResult}" />
+                <f:viewParam name="result" value="#{medicamentoListaServicio.resultList}" />
             </f:metadata>
             <!--Formulario dentro de un contenedor-->
             <h:form id="form">            
@@ -56,14 +56,14 @@
 
 
 
-                <p:dataTable id="tablaMedicamentos"  var="paciente_" value="#{medicamentoListaServicio}"
+                <p:dataTable id="tablaMedicamentos"  var="medicamento_" value="#{medicamentoListaServicio}"
                              paginator="true" rows="10"
                              paginatorAlwaysVisible="false"
                              paginatorPosition="top"
                              paginatorTemplate="{CurrentPageReport} {PreviousPageLink} {NextPageLink}"
                              rowsPerPageTemplate="5,10,15"
                              lazy="true"
-                             selection="#{medicamentoListaServicio.medicamnetoSelecionado}"
+                             selection="#{medicamentoListaServicio.medicamentoSeleccionado}"
                              rendered="true"
                              selectionMode="single">
                     <!--Acciones Ajax, que me permiten seleccionar y desseleccionar un paciente-->
