--- a/src/main/webapp/pages/home.xhtml
+++ b/src/main/webapp/pages/home.xhtml
@@ -104,14 +104,14 @@
                 </p:panel>
             </p:panel>
 
-            <p:panel header="#{messages['panel.admin.secretaria']}" toggleable="true" toggleOrientation="vertical">
+            <p:panel header="#{messages['modulo.admin.secretaria']}" toggleable="true" toggleOrientation="vertical">
                 <h:link value="#{messages['paciente.admin']}" rendered="#{true}" 
                         outcome="/pages/paciente/lista">                    
                 </h:link>
                 <br />                
             </p:panel>
-            <p:panel header="#{messages['panel.admin.farmacia']}" toggleable="true" toggleOrientation="vertical">
-                <h:link value="#{messages['modulo.medicamento']}" rendered="#{true}" 
+            <p:panel header="#{messages['modulo.admin.farmacia']}" toggleable="true" toggleOrientation="vertical">
+                <h:link value="#{messages['medicamento.admin']}" rendered="#{true}" 
                         outcome="/pages/farmacia/medicamento/lista">                    
                 </h:link>                
             </p:panel>
